Cloth filter brush only works in one direction in vertically split viewport #80311

Closed
opened 2020-09-01 07:19:20 +02:00 by Harrison Weed · 4 comments

System Information
Operating system: Windows 10 x64 / Linux (Deepin) x64
Graphics card: AMD Radeon Vega 8 intergrated graphics

Blender Version
Broken: 2.90.0 release 0330d1af29

Short description of error
If a 3D viewport was opened by splitting an area vertically, then the cloth filter brush will only make mesh float upwards when dragging the mouse in either direction.

Exact steps for others to reproduce the error
0. In "Sculpting" tab of the attached .blend file (the right side viewport was opened by vertically splitting the left side viewport), use cloth filter brush as described.

More details provided in the video.
problematic_cloth_filter.mp4

File:untitled.blend

**System Information** Operating system: Windows 10 x64 / Linux (Deepin) x64 Graphics card: AMD Radeon Vega 8 intergrated graphics **Blender Version** Broken: 2.90.0 release 0330d1af29c0 **Short description of error** If a 3D viewport was opened by splitting an area vertically, then the cloth filter brush will only make mesh float upwards when dragging the mouse in either direction. **Exact steps for others to reproduce the error** 0. In "Sculpting" tab of the attached .blend file (the right side viewport was opened by vertically splitting the left side viewport), use cloth filter brush as described. More details provided in the video. [problematic_cloth_filter.mp4](https://archive.blender.org/developer/F8828430/problematic_cloth_filter.mp4) File:[untitled.blend](https://archive.blender.org/developer/F8828426/untitled.blend)
Author

Added subscriber: @RigoLigo

Added subscriber: @RigoLigo
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by fb09bc3c35

This issue was referenced by fb09bc3c35b7544c46c13cc322421419948a3d52
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pablo Dobarro self-assigned this 2020-09-02 22:31:54 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80311
No description provided.